# pgmcomponents

./: .gitignore  .readthedocs.yaml  B07c_05032024ows  I05.pgf  Interactive.ipynb  LICENSE  README.md  SRANG  SRDISTR  Untitled.ipynb  Untitled1.ipynb  __init__.py  b07c400.py  b07c600.py  b07cCFFscan.py  b07cCFFscan.py.save  b07cEgap.py  b07test.py  components.html  components.py  config.ini  config_pgm.ini  effic.01  effic.02  effic.03  geometry_elements.html  geometry_elements.py  gui.py  gui_widgets.py  light.html  light.py  mirr.01  mirr.02  mirr.03  mplwidgets.py  nohup.out  notify.py  optax.01  optax.02  optax.03  (+21 more)
.ipynb_checkpoints/: components-checkpoint.py  config_pgm-checkpoint.ini  geometry_elements-checkpoint.py
Notebooks/: Interactive.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
b07c_raytracing/: B07cN4C1p4O3F35.dat:Zone.Identifier  Converged.pgf  EnergyGap.ipynb  JSONtesting.ipynb  SRSPEC  b07-1-82243.nxs  b07-1-82246.nxs  b07c600.py  b07cEgap.py  b07craytrace.py  b07measured.txt  cff14firstorder.html  fwhm2.csv  fwhm2_50bins_10eVstepSize.csv  fwhm2_50bins_50eVstepSize.csv  nohup.out  resultscff14o1.csv  resultscff14o1upto3000F35.csv  resultscff14o2upto6000F35.csv  resultscff14o3upto9000F35.csv  resultscff1p4o1upto3000F35withheightwithrays.csv  resultscff1p4o3upto9000F35withheightwithrays.csv  resultscff1p4o5upto15000F35withheightwithrays_test.csv  resultscff2o1upto3000F35.csv  resultscff2o1upto3000F35withheightwithrays.csv  resultscff2o2upto3000F35withheight.csv  resultscff2o3upto9000F35withheightwithrays.csv  (+2 more)
docs/: acknowledgements.rst  (+13 more)
(+1249 files in other folders)
