[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgmcomponents"
version = "0.4"
authors = [
  { name="Patrick Wang", email="patrick.wang@diamond.ac.uk" },
]
description = "X-ray tracing for plane grating monochromator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.23.0",
    "scipy >= 1.8.1",
    "matplotlib >= 3.5.2",
    "pysimplegui >= 4.60.0",
    "dill >= 0.3.6",
    "colorama >= 0.4.4",
    "pyrsistent >= 0.19.3"
]

[tool.setuptools]

packages = ["pgmcomponents", "pgmcomponents.gui", "pgmcomponents.elements", "pgmcomponents.geometry"]

[project.scripts]
pgm-gui = "pgmcomponents.gui.main:main"
